# hello-opengl

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
